--- a/templates/property_list.html
+++ b/templates/property_list.html
@@ -407,14 +407,15 @@
 							</div>
 						</div>
 					</div>
-
 				</div>
 
             </div>
         </section>
+        <div class="bottom_line"></div>
+        <div class="lsted_prpties"><h2 class="txt_our_prptes">Our-Listed Properties</h2></div><br><br>
+
 			<!-- End Sample Area -->
 			
-		                
         <!--================ start footer Area  =================-->	
         <footer class="footer-area section_gap">
             <div class="container">
@@ -444,7 +445,7 @@
                     </div>
                 </div>
             </div>
->
+
         </footer>
 
 		<!--================ End footer Area =================-->
@@ -452,6 +453,7 @@
         
         <!-- Optional JavaScript -->
         <!-- jQuery first, then Popper.js, then Bootstrap JS -->
+
 
         <script src="{% static 'js/jquery-3.2.1.min.js'%}"></script>
         <script src="{% static 'js/popper.js'%}"></script>
