--- a/templates/villa_skyframe_details.html
+++ b/templates/villa_skyframe_details.html
@@ -123,7 +123,7 @@
                                     <ul class="room_details">
                                         <li><img src="{% static 'image/property_img/bed-alt.png' %}" alt="" style="height: 20px; width: 20px;"> Double Bed</li>
                                         <!-- <li><img src="{% static 'image/property_img/trillium.png' %}" alt="" style="height: 20px; width: 20px;"> Garden View  </li> -->
-                                        <li><img src="{% static 'image/property_img/desk.png' %}" alt="" style="height: 20px; width: 20px;"> Work Desk </li>
+                                        <li><img src="{% static 'image/property_img/Desk.png' %}" alt="" style="height: 20px; width: 20px;"> Work Desk </li>
                                         <li><img src="{% static 'image/property_img/wifi.png' %}" alt="" style="height: 20px; width: 20px;"> Wi-Fi </li>
                                         <li><img src="{% static 'image/property_img/water-bottle.png' %}" alt="" style="height: 20px; width: 20px;"> Complimentar water bottle </li>
                                         <!-- <li><img src="{% static 'image/property_img/ban.png' %}" alt="" style="height: 20px; width: 20px;"> Non-Refundable</li> -->
@@ -138,7 +138,7 @@
                                     <ul class="room_details">
                                         <li><img src="{% static 'image/property_img/bed-alt.png' %}" alt="" style="height: 20px; width: 20px;"> Double Bed</li>
                                         <!-- <li><img src="{% static 'image/property_img/trillium.png' %}" alt="" style="height: 20px; width: 20px;"> Garden View  </li> -->
-                                        <li><img src="{% static 'image/property_img/desk.png' %}" alt="" style="height: 20px; width: 20px;"> Work Desk </li>
+                                        <li><img src="{% static 'image/property_img/Desk.png' %}" alt="" style="height: 20px; width: 20px;"> Work Desk </li>
                                         <li><img src="{% static 'image/property_img/wifi.png' %}" alt="" style="height: 20px; width: 20px;"> Wi-Fi </li>
                                         <li><img src="{% static 'image/property_img/water-bottle.png' %}" alt="" style="height: 20px; width: 20px;"> Complimentar water bottle </li>
                                         <!-- <li><img src="{% static 'image/property_img/ban.png' %}" alt="" style="height: 20px; width: 20px;"> Non-Refundable</li> -->
@@ -153,7 +153,7 @@
                             <div class="gallery_img">
                                 <img src="{% static 'image/property_img/villa_skyframe_1.jpg' %}" alt="">
                                 <div class="hover">
-                                    <a class="light" href="{% static 'image/property_img/eva_beach_1.jpeg' %}"><i class="fa fa-expand"></i></a>
+                                    <a class="light" href="{% static 'image/property_img/eva_beach_1.jpeg ' %}"><i class="fa fa-expand"></i></a>
                                 </div>
                             </div>
                         </div>
@@ -161,7 +161,7 @@
                             <div class="gallery_img">
                                 <img src="{% static 'image/property_img/villaskyframe_2.jpeg' %}" alt="">
                                 <div class="hover">
-                                    <a class="light" href="{% static 'image/property_img/cliffcounty-dtls.jpeg' %}"><i class="fa fa-expand"></i></a>
+                                    <a class="light" href="{% static 'image/property_img/cliffcounty-dtls.jpeg ' %}"><i class="fa fa-expand"></i></a>
                                 </div>
                             </div>
                         </div>
@@ -221,10 +221,49 @@
                 <div class="footer-row">
                     <div class="col-lg-3  col-md-6 col-sm-6">
                         <div class="single-footer-widget">
-                            <h6 class="footer_title">About Agency</h6>
-                            <p class="footer-about">The world has become so fast paced that people don’t want to stand by reading a page of information, they would much rather look at a presentation and understand the message. It has come to a point </p>
+                            <div>
+                                <h6 class="footer_title">About Agency</h6>
+                                <p class="footer-about">The world has become so fast paced that people don’t want to stand by reading a page of information, they would much rather look at a presentation and understand the message. It has come to a point </p>
+                            </div>
+
+                           
                         </div>
-                    </div>						
+                    </div>	
+
+                    <h4 class="txt_cnct_sngle">Book Now</h4>
+                    <div class="col-md-9">
+                        <h4 class="txt_cnct_min">Book Now</h4>
+                        <form method="post" action="/enquiry/" class="row contact_form">
+                            {% csrf_token %}
+                            <div class="col-md-6">
+                                <div class="form-group">
+                                    <label for="check_in">Check-In Date:</label>
+                                    <input type="date" class="form-control" name="check_in" id="check_in" required >
+                                </div>
+                                <div class="form-group">
+                                    <label for="check_out">Check-Out Date:</label>
+                                    <input type="date" class="form-control" name="check_out" id="check_out" required >
+                                </div>
+                                <div class="form-group">
+                                    <label for="name">Your Name:</label>
+                                    <input type="text" class="form-control" id="name" name="name" placeholder="Enter Name">
+                                </div>
+                            </div>
+                            <div class="col-md-6">
+                                <div class="form-group">
+                                    <label for="contact_number">Contact Number:</label>
+                                    <input type="tel" class="form-control" id="contact_number" name="contact_number" placeholder="Enter Phone No.">
+                                </div>
+                                <div class="form-group">
+                                    <label for="num_people">Number of People:</label>
+                                    <input type="number" class="form-control" id="num_people" name="num_people" min="1" required placeholder="Enter No. of People">
+                                </div>
+                            </div>
+                            <div class="col-md-12 text-right">
+                                <button type="submit" class="btn theme_btn button_hover">Send Message</button>
+                            </div>
+                        </form>
+                    </div>
                 </div>
                 <div class="border_line"></div>
                 <div class="row footer-bottom d-flex justify-content-between align-items-center">
@@ -236,7 +275,6 @@
                         </p>
                     </div>
                     <div class="col-lg-4 col-sm-12 footer-social">
-                        <!-- <a href="#"><i class="fa fa-facebook"  style="font-size: 30px;"></i></a> -->
                         <a href="https://www.instagram.com/varkalastays4/"><i class="fa fa-instagram" style="font-size: 30px;"></i></a>
                         <a href="https://wa.me/+919074582622"><i class="fa fa-whatsapp"  style="font-size: 30px;"></i></a>
                     </div>
