--- a/templates/index.html
+++ b/templates/index.html
@@ -167,7 +167,7 @@
                                     <h2>Cliff County Varkala</h2>
                                     </a>
                                     <p><a href="#">Cliff County Varkala </a></p>
-                                    <p> Walkable distance to the Beach</p>
+                                    <p>Beach side Property</p>
                                     <div class="amenities">
                                         <span>Car parking</span>
                                         <span> Wi-Fi</span>
@@ -207,10 +207,10 @@
                                     <h2>Ashokam Beach Resort</h2>
                                     </a>
                                     <p><a href="#">Ashokam Beach Resort</a></p>
-                                    <p> 100 meter Walkable distance to the Beach</p>
+                                    <p> Beach side Property</p>
                                     <div class="amenities">
                                         <span>Car park</span>
-                                        <span> Wi-Fi </span>
+                                        <span>Wi-Fi </span>
                                         <span>Bike Rent</span>
                                         <span>Sea-view Rooms</span>
                                         <span>Swimming Pool </span> 
@@ -480,6 +480,178 @@
 							</div>
 						</div>
 					</div>
+                    </div>
+
+                    <div class="bottom_line"></div>
+                    <div class="lsted_prpties"><h2 class="txt_our_prptes">Our-Listed Properties</h2></div><br><br>
+            
+                    <div class="container">
+            
+                        <div class="hotel-listing">
+            
+                            <!-- hotel 1-ss_beach_resort -->
+                                 <div class="hotel-hover">
+                                    <div class="hotel-card">
+                                        <div class="hotel-image">
+                                            <a href="{%url 'ss_beach_resort_details' %}">
+                                            <img src="{% static 'image/property_img/ss_beach_resort_main.jpeg' %}" alt="City Trip Hostels Zaandam-Amsterdam">
+                                            </a>
+                                            <div class="more-photos">See all</div>
+                                        </div>
+                                        <div class="hotel-info">
+                                            <div class="hotel-details">
+                                                <a href="{%url 'ss_beach_resort_details' %}">
+                                                <h2>SS Beach Resort</h2>
+                                                </a>
+                                                <p><a href="#">SS BeachResort</a></p>
+                                                <p> 2 minutes walk to Varkala Beach</p>
+                                                <div class="amenities">
+                                                    <span>Car parking</span>
+                                                    <span> Wi-Fi</span>
+                                                    <span>Bike Rent</span>
+                                                    <span>Taxi services</span>
+                                                    <span>Complimentary water bottle </span>
+                                                </div>
+                                            </div>
+                                            <div class="details_info">
+                                                <a href="tel:+9108069640311"><i class="fa fa-phone"  style="font-size: 30px;"></i><p>Call Now</p></a>
+                
+                                                <div class="share-buttons">
+                                                    <a href="https://www.facebook.com/sharer/sharer.php?u=https://varkalastays.com/ss_beach_resort/" class="facebook" target="_blank">Share on Facebook</a>
+                                                    <a href="https://api.whatsapp.com/send?text=Check%20this%20out!%20https://varkalastays.com/ss_beach_resort/" class="whatsapp" target="_blank">Share on WhatsApp</a>
+                                                </div>
+                
+                                                <a class="viewmore_a" href="{%url 'ss_beach_resort_details' %}">
+                                                    <button class="view_more_btn">View more</button>
+                                                </a>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+            
+                                <!-- zion_villa_beach_resort -->
+                                <div class="hotel-hover">
+                                    <div class="hotel-card">
+                                        <div class="hotel-image">
+                                            <a href="{%url 'zion_villa_resort_details' %}">
+                                            <img src="{% static 'image/property_img/zion_villa_main.jpg' %}" alt="City Trip Hostels Zaandam-Amsterdam">
+                                            </a>
+                                            <div class="more-photos">See all</div>
+                                        </div>
+                                        <div class="hotel-info">
+                                            <div class="hotel-details">
+                                                <a href="{%url 'zion_villa_resort_details' %}">
+                                                <h2>Zion Villa Beach View Resort</h2>
+                                                </a>
+                                                <p><a href="#">Zion Villa Beach View Resort</a></p>
+                                                <p> Located in Varkala in the Kerala Region, 700 metres from Janardhanaswamy Temple</p>
+                                                <div class="amenities">
+                                                    <span>Car parking</span>
+                                                    <span> Wi-Fi</span>
+                                                    <span>Bike Rent</span>
+                                                    <span>Taxi services</span>
+                                                    <span>Complimentary water bottle </span>
+                                                </div>
+                                            </div>
+                                            <div class="details_info">
+                                                <a href="tel:+9108069640311"><i class="fa fa-phone"  style="font-size: 30px;"></i><p>Call Now</p></a>
+                
+                                                <div class="share-buttons">
+                                                    <a href="https://www.facebook.com/sharer/sharer.php?u=https://varkalastays.com/zion_villa_resort/" class="facebook" target="_blank">Share on Facebook</a>
+                                                    <a href="https://api.whatsapp.com/send?text=Check%20this%20out!%20https://varkalastays.com/zion_villa_resort/" class="whatsapp" target="_blank">Share on WhatsApp</a>
+                                                </div>
+                
+                                                <a class="viewmore_a" href="{%url 'zion_villa_resort_details' %}">
+                                                    <button class="view_more_btn">View more</button>
+                                                </a>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+            
+                                <!--gone_costal-->
+            
+                                <div class="hotel-hover">
+                                    <div class="hotel-card">
+                                        <div class="hotel-image">
+                                            <a href="{%url 'gone_costal_details' %}">
+                                            <img src="{% static 'image/property_img/gone_costal_main.jpg' %}" alt="City Trip Hostels Zaandam-Amsterdam">
+                                            </a>
+                                            <div class="more-photos">See all</div>
+                                        </div>
+                                        <div class="hotel-info">
+                                            <div class="hotel-details">
+                                                <a href="{%url 'gone_costal_details' %}">
+                                                <h2>Gone coastal varkala</h2>
+                                                </a>
+                                                <p><a href="#">Gone coastal varkala</a></p>
+                                                <p>1-2 minutes walk from Varkala Beach</p>
+                                                <div class="amenities">
+                                                    <span>Car parking</span>
+                                                    <span> Wi-Fi</span>
+                                                    <span>Bike Rent</span>
+                                                    <span>Taxi services</span>
+                                                    <span>Parking available for free</span>
+                                                </div>
+                                            </div>
+                                            <div class="details_info">
+                                                <a href="tel:+9108069640311"><i class="fa fa-phone"  style="font-size: 30px;"></i><p>Call Now</p></a>
+                
+                                                <div class="share-buttons">
+                                                    <a href="https://www.facebook.com/sharer/sharer.php?u=https://varkalastays.com/gone_costal/" class="facebook" target="_blank">Share on Facebook</a>
+                                                    <a href="https://api.whatsapp.com/send?text=Check%20this%20out!%20https://varkalastays.com/gone_costal/" class="whatsapp" target="_blank">Share on WhatsApp</a>
+                                                </div>
+                
+                                                <a class="viewmore_a" href="{%url 'gone_costal_details' %}">
+                                                    <button class="view_more_btn">View more</button>
+                                                </a>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+            
+                                  <!--kerala_bamboo-->
+            
+                                  <div class="hotel-hover">
+                                    <div class="hotel-card">
+                                        <div class="hotel-image">
+                                            <a href="{%url 'kerala_bamboo_details' %}">
+                                            <img src="{% static 'image/property_img/kerla_bambo_main.jpg' %}" alt="City Trip Hostels Zaandam-Amsterdam">
+                                            </a>
+                                            <div class="more-photos">See all</div>
+                                        </div>
+                                        <div class="hotel-info">
+                                            <div class="hotel-details">
+                                                <a href="{%url 'kerala_bamboo_details' %}">
+                                                <h2>Kerala Bamboo House</h2>
+                                                </a>
+                                                <p><a href="#">Kerala Bamboo House</a></p>
+                                                <p>About a minutes walk to Varkala Beach</p>
+                                                <div class="amenities">
+                                                    <span>Car parking</span>
+                                                    <span> Wi-Fi</span>
+                                                    <span>Swimming Pool</span>
+                                                    <span>Power Backup</span>
+                                                    <span>Parking available for free</span>
+                                                </div>
+                                            </div>
+                                            <div class="details_info">
+                                                <a href="tel:+9108069640311"><i class="fa fa-phone"  style="font-size: 30px;"></i><p>Call Now</p></a>
+                
+                                                <div class="share-buttons">
+                                                    <a href="https://www.facebook.com/sharer/sharer.php?u=https://varkalastays.com/kerala_bamboo/" class="facebook" target="_blank">Share on Facebook</a>
+                                                    <a href="https://api.whatsapp.com/send?text=Check%20this%20out!%20https://varkalastays.com/kerala_bamboo/" class="whatsapp" target="_blank">Share on WhatsApp</a>
+                                                </div>
+                
+                                                <a class="viewmore_a" href="{%url 'kerala_bamboo_details' %}">
+                                                    <button class="view_more_btn">View more</button>
+                                                </a>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+            
+                        </div>
                     </div>
                 </div>
             </div>
