--- a/templates/evabeach_details.html
+++ b/templates/evabeach_details.html
@@ -45,7 +45,7 @@
                                     <li class="nav-item"><a class="nav-link" href="#">Blog Details</a></li>
                                 </ul>
                             </li>  -->
-                            <li class="nav-item"><a class="nav-link" href="{%url 'property_list'%}">Hotel_list</a></li>
+                            <li class="nav-item"><a class="nav-link" href="{%url 'property_list'%}">Property List</a></li>
                             <li class="nav-item"><a class="nav-link" href="{%url 'contact'%}">Contact</a></li>
                         </ul>
                     </div> 
