--- a/templates/property_list.html
+++ b/templates/property_list.html
@@ -511,7 +511,7 @@
                             <div class="hotel-info">
                                 <div class="hotel-details">
                                     <a href="{%url 'gone_costal_details' %}">
-                                    <h2>Gone coastal varkala</h2>
+                                    <h2>Gone Coastal varkala</h2>
                                     </a>
                                     <p><a href="#">Gone coastal varkala</a></p>
                                     <p>1-2 minutes walk from Varkala Beach</p>
